--- a/CoffeeConnect.WebMVC/Views/Coffee/Index.cshtml
+++ b/CoffeeConnect.WebMVC/Views/Coffee/Index.cshtml
@@ -20,6 +20,9 @@
         <th>
             @Html.DisplayNameFor(model => model.PricePerPound)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.CoffeeDescription)
+        </th>
         <th></th>
     </tr>
 
@@ -33,6 +36,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.PricePerPound)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.CoffeeDescription)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
