Added detail view

--- a/CoffeeConnect.WebMVC/Views/Coffee/Index.cshtml
+++ b/CoffeeConnect.WebMVC/Views/Coffee/Index.cshtml
@@ -51,9 +51,9 @@
             @Html.DisplayFor(modelItem => item.CoffeeDescription)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            @Html.ActionLink("Edit", "Edit", new {  id=item.CoffeeId  }) |
+            @Html.ActionLink("Details", "Details", new {  id=item.CoffeeId  }) |
+            @Html.ActionLink("Delete", "Delete", new {  id=item.CoffeeId  })
         </td>
     </tr>
 }
