--- a/CoffeeConnect.WebMVC/Views/Shared/_Layout.cshtml
+++ b/CoffeeConnect.WebMVC/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Coffee", "Index", "Coffee")</li>
                     <li>@Html.ActionLink("Customer Account", "Index", "Customer")</li>
+                    <li>@Html.ActionLink("Purchase Coffee", "Index", "Purchase")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
