--- a/CoffeeConnect.WebMVC/Views/Home/Index.cshtml
+++ b/CoffeeConnect.WebMVC/Views/Home/Index.cshtml
@@ -3,29 +3,29 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Coffee Connect</h1>
+    <p class="lead">Coffee Connect is an online coffee boutique where users can order as much coffee as they would like. </p>
+    
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Learn more about coffee</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            If you have ever been curious about where those delicious little beans come from and the history of how they came to be made into Coffee 
+            please click the link below.
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="https://www.ncausa.org/about-coffee/history-of-coffee">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Different coffee roasts: Dark, Medium, Light</h2>
+        <p>Ever wondered why some roasts taste bitter and some roasts taste sweet? Why some have extremely high caffine content and others 
+        have none? The link below should help. </p>
+        <p><a class="btn btn-default" href="https://www.coppermooncoffee.com/blogs/newsroom/what-is-the-difference-between-light-medium-and-dark-roast-coffee#:~:text=The%20most%20common%20words%20to,Light%2C%20Medium%2C%20and%20Dark.&text=Darker%20roasts%20are%20slightly%20less,the%20surface%20of%20the%20bean">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2> Strongest coffee's in the world </h2>
+        <p> Below is a link to the strongest coffee beans in the world </p>
+        <p><a class="btn btn-default" href="https://www.homegrounds.co/worlds-strongest-coffee/">Learn more &raquo;</a></p>
     </div>
 </div>
