--- a/CoffeeConnect.WebMVC/Content/Site.css
+++ b/CoffeeConnect.WebMVC/Content/Site.css
@@ -1,14 +1,36 @@
 ﻿body {
+    text-align: center;
     padding-top: 50px;
     padding-bottom: 20px;
+    background-image: url("Assets/coffee-beans.jpg");
+    background-size: cover;
+    letter-spacing: .1em;
+    font-family: Georgia, serif;
+    font-size: 14px;
+    letter-spacing: 1px;
+    word-spacing: 1px;
+    color: #000000;
+    font-weight: 700;
+    font-style: normal;
+    font-variant: normal;
+    color: #0E0504;
+
 }
 
 /* Set padding to keep content from hitting the edges */
-.body-content {
+.body-content 
+{
     padding-left: 15px;
     padding-right: 15px;
+   /* background-image: url("Assets/coffee-beans.jpg");*/
+  /*  background-size: cover;*/
 }
-
+.container {
+    background-color: #EFC3A4;
+    background-size: cover;
+    background-position: bottom;
+    
+}
 /* Override the default bootstrap behavior where horizontal description lists 
    will truncate terms that are too long to fit in the left column 
 */
@@ -21,4 +43,73 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+.container 
+{
+ /*   background-image: url("Assets/coffee-beans.jpg");
+    background-size: cover;*/
+}
+
+.coffeecontainer {
+    border: 2px solid black;
+    display: block;
+    background-image: url("Assets/jumbotron.jpg");
+    background-size: cover;
+}
+
+.coffee-card {
+    background-image: url('Assets/coffee-cards.jpg');
+    border: 1px solid black;
+    display: block;
+    background-size: cover;
+    max-width: 100%;
+    height: 75px;
+    background-position: center;
+    margin: 5px 5px;
+    color: #e0dfdc;
+    background-color: #567;
+    letter-spacing: .1em;
+    font-family: Georgia, serif;
+    font-size: 14px;
+    letter-spacing: 2px;
+    word-spacing: 2px;
+    color: #000000;
+    font-weight: 700;
+  
+    font-style: normal;
+    font-variant: normal;
+    
+}
+.btn-default {
+    color: rgb(0, 0, 0);
+    font-size: 16px;
+    line-height: 16px;
+    padding: 6px;
+    font-family: Georgia, serif;
+    font-weight: 700;
+    text-decoration: none;
+    font-style: normal;
+    font-variant: normal;
+    text-transform: none;
+    background-image: radial-gradient(at center center, rgb(190, 118, 86) 0%, rgb(239, 195, 164) 0%, rgb(190, 118, 86) 100%);
+    box-shadow: rgb(255, 255, 255) 5px 5px 15px 5px;
+    display: inline-block;
+}
+    
+    
+
+
+.btn-default:hover {
+    background: #BE7656;
+}
+
+.btn-default:active {
+    background: #BE7656;
+}
+
+
+.jumbotron {
+    background-image: url("Assets/jumbotron.jpg");
+    background-size: cover;
+    display: contents;
 }
