--- a/CoffeeConnect.WebMVC/Views/Purchase/Index.cshtml
+++ b/CoffeeConnect.WebMVC/Views/Purchase/Index.cshtml
@@ -15,6 +15,12 @@
             @Html.DisplayNameFor(model => model.PurchaseId)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.CustomerId)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.CoffeeId)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.LbsOfCoffee)
         </th>
         <th>
@@ -33,31 +39,37 @@
     </tr>
 
 @foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.PurchaseId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LbsOfCoffee)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CoffeeName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LastName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateOfPurchase)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new {  id=item.PurchaseId }) |
-            @Html.ActionLink("Details", "Details", new {  id=item.PurchaseId  }) |
-            @Html.ActionLink("Delete", "Delete", new {  id=item.PurchaseId  })
-        </td>
-    </tr>
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.PurchaseId)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.CustomerId)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.CoffeeId)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.LbsOfCoffee)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.CoffeeName)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.FirstName)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.LastName)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.DateOfPurchase)
+    </td>
+    <td>
+        @Html.ActionLink("Edit", "Edit", new { id = item.PurchaseId }) |
+        @Html.ActionLink("Details", "Details", new { id = item.PurchaseId }) |
+        @Html.ActionLink("Delete", "Delete", new { id = item.PurchaseId })
+    </td>
+</tr>
 }
 
 </table>
