--- a/CoffeeConnect.WebMVC/Views/Home/Index.cshtml
+++ b/CoffeeConnect.WebMVC/Views/Home/Index.cshtml
@@ -15,17 +15,17 @@
             If you have ever been curious about where those delicious little beans come from and the history of how they came to be made into Coffee 
             please click the link below.
         </p>
-        <p><a class="btn btn-default" href="https://www.ncausa.org/about-coffee/history-of-coffee">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" target="_blank" href="https://www.ncausa.org/about-coffee/history-of-coffee">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Different coffee roasts: Dark, Medium, Light</h2>
         <p>Ever wondered why some roasts taste bitter and some roasts taste sweet? Why some have extremely high caffine content and others 
         have none? The link below should help. </p>
-        <p><a class="btn btn-default" href="https://www.coppermooncoffee.com/blogs/newsroom/what-is-the-difference-between-light-medium-and-dark-roast-coffee#:~:text=The%20most%20common%20words%20to,Light%2C%20Medium%2C%20and%20Dark.&text=Darker%20roasts%20are%20slightly%20less,the%20surface%20of%20the%20bean">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" target="_blank" href="https://www.coppermooncoffee.com/blogs/newsroom/what-is-the-difference-between-light-medium-and-dark-roast-coffee#:~:text=The%20most%20common%20words%20to,Light%2C%20Medium%2C%20and%20Dark.&text=Darker%20roasts%20are%20slightly%20less,the%20surface%20of%20the%20bean">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2> Strongest coffee's in the world </h2>
         <p> Below is a link to the strongest coffee beans in the world </p>
-        <p><a class="btn btn-default" href="https://www.homegrounds.co/worlds-strongest-coffee/">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" target="_blank" href="https://www.homegrounds.co/worlds-strongest-coffee/">Learn more &raquo;</a></p>
     </div>
 </div>
