--- a/CoffeeConnect.WebMVC/Content/Site.css
+++ b/CoffeeConnect.WebMVC/Content/Site.css
@@ -9,7 +9,7 @@
     font-size: 14px;
     letter-spacing: 1px;
     word-spacing: 1px;
-    color: #000000;
+   
     font-weight: 700;
     font-style: normal;
     font-variant: normal;
@@ -55,15 +55,18 @@ textarea {
     display: block;
     background-image: url("Assets/jumbotron.jpg");
     background-size: cover;
+    display:flex;
+    justify-content:center;
+
 }
 
 .coffee-card {
     background-image: url('Assets/coffee-cards.jpg');
-    border: 1px solid black;
+    border: 2px solid black;
     display: block;
     background-size: cover;
-    max-width: 100%;
-    height: 75px;
+    width: 250px;
+    height: 150px;
     background-position: center;
     margin: 5px 5px;
     color: #e0dfdc;
@@ -71,14 +74,105 @@ textarea {
     letter-spacing: .1em;
     font-family: Georgia, serif;
     font-size: 14px;
-    letter-spacing: 2px;
-    word-spacing: 2px;
+    letter-spacing: 1px;
+    word-spacing: 1px;
     color: #000000;
     font-weight: 700;
-  
     font-style: normal;
     font-variant: normal;
+    text-align: center;
+
+}
+.customercontainer {
+    border: 2px solid black;
+    display: block;
+    background-color: #3B2621;
+    background-size: cover;
+    background-position: bottom;
     
+}
+.customer-card {
+    background-image: url('Assets/this one.gif');
+    border: 2px solid black;
+    display: block;
+    background-size: cover;
+    width: 275px;
+    height: 150px;
+    background-position: center;
+    margin: 5px 5px;
+    color: #e0dfdc;
+    background-color: #567;
+    letter-spacing: .1em;
+    font-family: Georgia, serif;
+    font-size: 14px;
+    letter-spacing: 1px;
+    word-spacing: 1px;
+    color: #000000;
+    font-weight: 700;
+    font-style: normal;
+    font-variant: normal;
+    text-align: center;
+}
+.PurchaseContainer {
+    border: 2px solid black;
+    display: block;
+    background-image: url("Assets/jumbotron.jpg");
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+}
+.purchase-card {
+    background-image: url('Assets/cute.gif');
+    border: 2px solid black;
+    display: block;
+    background-size: cover;
+    width: 275px;
+    height: 150px;
+    background-position: bottom;
+    margin: 5px 5px;
+    color: #e0dfdc;
+    background-color: #567;
+    letter-spacing: .1em;
+    font-family: Georgia, serif;
+    font-size: 14px;
+    letter-spacing: 1px;
+    word-spacing: 1px;
+    color: #000000;
+    font-weight: 700;
+    font-style: normal;
+    font-variant: normal;
+    text-align: center;
+}
+
+
+a:link {
+    color: #028A0F;
+}
+a:visited {
+    color: #028A0F;
+}
+a:hover { 
+    color: #03C04A;
+}
+a:active {
+    color: #03C04A;
+}
+
+.EditDeleteDetails
+{
+    position: absolute;
+    bottom: .5em;
+    right: .5em;
+}
+.CustomerEdit {
+    position: absolute;
+    bottom: .5em;
+    
+}
+.Purchaseedit {
+    position: absolute;
+    bottom: .5em;
+    right: 3em;
 }
 .btn-default {
     color: rgb(0, 0, 0);
