--- a/CoffeeConnect.WebMVC/Views/Purchase/Index.cshtml
+++ b/CoffeeConnect.WebMVC/Views/Purchase/Index.cshtml
@@ -10,7 +10,7 @@
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
-    <tr>
+    @*<tr>
         <th>
             @Html.DisplayNameFor(model => model.PurchaseId)
         </th>
@@ -36,40 +36,48 @@
             @Html.DisplayNameFor(model => model.DateOfPurchase)
         </th>
         <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-<tr>
-    <td>
-        @Html.DisplayFor(modelItem => item.PurchaseId)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.CustomerId)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.CoffeeId)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.LbsOfCoffee)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.CoffeeName)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.FirstName)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.LastName)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.DateOfPurchase)
-    </td>
-    <td>
-        @Html.ActionLink("Edit", "Edit", new { id = item.PurchaseId }) |
-        @Html.ActionLink("Details", "Details", new { id = item.PurchaseId }) |
-        @Html.ActionLink("Delete", "Delete", new { id = item.PurchaseId })
-    </td>
-</tr>
-}
-
+    </tr>*@
 </table>
+<div class="PurchaseContainer row">
+
+    @foreach (var item in Model) 
+    {
+      <div class="col-md-3 purchase-card">
+
+
+        @Html.DisplayFor(modelItem => item.PurchaseId)
+        @Html.DisplayFor(modelItem => item.CustomerId)
+        @Html.DisplayFor(modelItem => item.CoffeeId)
+        @Html.DisplayFor(modelItem => item.LbsOfCoffee)
+        @Html.DisplayFor(modelItem => item.CoffeeName)
+        @Html.DisplayFor(modelItem => item.FirstName)
+        @Html.DisplayFor(modelItem => item.LastName)
+        @Html.DisplayFor(modelItem => item.DateOfPurchase)
+
+        
+        <div class="Purchaseedit">
+
+
+            @Html.ActionLink("Edit", "Edit", new { id = item.PurchaseId }) 
+            @Html.ActionLink("Details", "Details", new { id = item.PurchaseId }) 
+            @Html.ActionLink("Delete", "Delete", new { id = item.PurchaseId })
+        </div>
+      </div>
+
+        }
+    </div>
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+
+
+
